# Drawing-analyzer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODING_STANDARDS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
roles/developer/: AGENTS.md
runtime/: bootstrap.md  model-tiers.md  shared-rules.md
runtime/mcp/: git.md
skills/code-review/: SKILL.md
skills/commit/: SKILL.md
skills/deep-dive/: SKILL.md
skills/hand-off/: SKILL.md
skills/markdown/: SKILL.md
skills/summarise-session/: SKILL.md
src/drawing_analyzer/: __init__.py  cli.py
src/drawing_analyzer/dxf/: __init__.py  reader.py  units.py
src/drawing_analyzer/extract/: __init__.py  ga_element.py  provenance.py  reduced_level.py  slab_depth.py
src/drawing_analyzer/ingest/: __init__.py  document.py  reader.py
src/drawing_analyzer/model/: __init__.py  entities.py  geometry.py  provenance.py
src/drawing_analyzer/pdf/: __init__.py  reader.py
src/drawing_analyzer/report/: __init__.py  csv_report.py  json_report.py  pdf_markup.py
tests/: test_cli.py  test_package.py
tests/dxf/: test_reader.py  test_units.py
tests/extract/: test_ga_element.py  test_reduced_level.py  test_slab_depth.py
tests/ingest/: test_reader.py
tests/model/: test_entities.py
tests/pdf/: test_reader.py
tests/report/: test_csv_report.py  test_json_report.py  test_pdf_markup.py
